[gd_scene load_steps=15 format=2]

[ext_resource path="res://codigo/singleplayer/grosso/08/feedback.gd" type="Script" id=1]
[ext_resource path="res://img/tela_feedback_novo.png" type="Texture" id=2]
[ext_resource path="res://img/tela_score.png" type="Texture" id=3]
[ext_resource path="res://img/corpo_feedback.png" type="Texture" id=4]
[ext_resource path="res://img/feliz_telafeed.png" type="Texture" id=5]
[ext_resource path="res://font/AMPLESOFT MEDIUM.OTF" type="DynamicFontData" id=6]
[ext_resource path="res://img/seguir_2.png" type="Texture" id=7]
[ext_resource path="res://img/seguir_1.png" type="Texture" id=8]
[ext_resource path="res://img/menu_2.png" type="Texture" id=9]
[ext_resource path="res://img/menu_1.png" type="Texture" id=10]
[ext_resource path="res://img/jogarNovamente_1.png" type="Texture" id=11]
[ext_resource path="res://img/jogarNovamente_2.png" type="Texture" id=12]
[ext_resource path="res://img/seta.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
size = 28
font_data = ExtResource( 6 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = 855.769
margin_top = 206.557
margin_right = 1367.77
margin_bottom = 327.557
texture = ExtResource( 3 )

[node name="corpo" type="TextureRect" parent="."]
visible = false
margin_left = 37.0
margin_top = 37.0
margin_right = 506.0
margin_bottom = 763.0
texture = ExtResource( 4 )

[node name="sentimento" type="TextureRect" parent="."]
margin_left = 71.5779
margin_top = 65.0709
margin_right = 483.578
margin_bottom = 729.071
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="."]
margin_left = 489.0
margin_top = 73.0
margin_right = 1351.0
margin_bottom = 205.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="Label2" type="Label" parent="."]
margin_left = 879.0
margin_top = 247.0
margin_right = 1351.0
margin_bottom = 315.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.00784314, 0.00784314, 0.00784314, 1 )
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="Seguir" type="TextureButton" parent="."]
visible = false
margin_left = 798.345
margin_top = 435.068
margin_right = 1134.35
margin_bottom = 551.068
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="Menu" type="TextureButton" parent="."]
margin_left = 717.869
margin_top = 602.335
margin_right = 1218.87
margin_bottom = 718.335
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 10 )

[node name="jogarNovamente3" type="TextureButton" parent="."]
visible = false
margin_left = 652.604
margin_top = 416.603
margin_right = 1339.61
margin_bottom = 532.603
texture_normal = ExtResource( 11 )
texture_hover = ExtResource( 12 )

[node name="Seguir2" type="TextureButton" parent="."]
visible = false
margin_left = 795.954
margin_top = 435.068
margin_right = 1131.95
margin_bottom = 551.068
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="seta1" type="TextureRect" parent="."]
visible = false
margin_left = 279.913
margin_top = 504.128
margin_right = 353.913
margin_bottom = 575.128
texture = ExtResource( 13 )

[node name="seta2" type="TextureRect" parent="."]
visible = false
margin_left = 281.443
margin_top = 501.068
margin_right = 355.443
margin_bottom = 572.068
texture = ExtResource( 13 )
[connection signal="pressed" from="Seguir" to="." method="_on_Seguir_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="jogarNovamente3" to="." method="_on_jogarNovamente3_pressed"]
[connection signal="pressed" from="Seguir2" to="." method="_on_Seguir2_pressed"]
